trying to fix mobile text align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2355,7 +2355,7 @@ ul.actions {
 				-ms-flex-shrink: 1;
 				flex-shrink: 1;
 				padding: 1em 0 0 0;
-				text-align: center;
+				text-align: left;
 				width: 100%;
 			}
 
